JWT authentication setup

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "github.com/dietermd",
+    "Audience": "github.com/dietermd",
+    "Key": "secret"
+  },
   "AllowedHosts": "*"
 }
