Get token endpoint

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   "Jwt": {
     "Issuer": "github.com/dietermd",
     "Audience": "github.com/dietermd",
-    "Key": "secret"
+    "Key": "qwertyuiopasdfghjklçzxcvbnmqwert"
   },
   "AllowedHosts": "*"
 }
